<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<CheckBoxPreference
        android:key="@string/pref_high_quality_key"
        android:title="@string/pref_high_quality_title"
        android:summary="@string/pref_high_quality_desc"/>-->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="Odio/"
        android:inputType="textCapWords"
        android:key="storage_pref"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/storagepref_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/quality_titles"
        android:entryValues="@array/quality_values"
        android:key="quality_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/qualitypref_title"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/channel_titles"
        android:entryValues="@array/channel_values"
        android:key="channel_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/channel_pref"/>

    <Preference
        android:key="@string/pref_about_key"
        android:title="@string/pref_about_title"
        android:summary="@string/pref_about_desc"/>
</PreferenceScreen>